# TheBeckoningMU

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_GAP_ANALYSIS_REPORT.md  GAP_ANALYSIS_REPORT.md  GAP_FIX_IMPLEMENTATION_SUMMARY.md  GIT_SETUP.md  HELP_SYSTEM_ANALYSIS.txt  HOW_TO_COMPLETE_MERGE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPORT_COMMAND_TEST_GUIDE.md  MERGE_RESOLUTION_COMPLETE.md  PHASE_14_IMPLEMENTATION_REPORT.md  PHASE_15_COMBAT_IMPLEMENTATION.md  PHASE_16_IMPLEMENTATION_SUMMARY.md  PHASE_16_TEST_CHECKLIST.md  PHASE_1B_NEWS_SYSTEM_COMPLETE.md  PHASE_6_COMPLETE.md  QA_BUG_REPORT.md  README.md  RECOVERY_GUIDE.md  RESOLUTION_SUMMARY.md  SESSION_NOTES.md  SESSION_SUMMARY_PHASE6.md  TODO_IMPLEMENTATION_NOTES.md  VERIFICATION_REPORT.md  WEB_BUILDER_DESIGN.md  WEB_BUILDER_IMPLEMENTATION_PLAN.md  WEB_CHARGEN_ANALYSIS.md  WEB_CHARGEN_GUIDE.md  cursor-agent-wrapper.sh  pyproject.toml  reload-evennia.ps1  start-evennia.ps1  stop-evennia.ps1  test_blood_commands.py  test_dice_commands.py  test_import.py  test_imports.py  (+2 more)
.claude/: PERMISSIONS_TEST.md  settings.local.json
.devilmcp/: CHANGELOG.md  LAST_SESSION.md  PRODUCTION_ROADMAP.md  PROJECT_CONTEXT.md  PROJECT_CONTEXT_CORRECTED.md  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.skills/: CURSOR_WRAPPER_USAGE.md  Claude-Orchestrator.md  Copilot-Engineer.md  Cursor-Engineer.md  Gemini-Researcher.md  README.md  ai-quadrumvirate-coordination.md  copilot.agent.wrapper.sh  cursor-agent-advanced-usage.md  cursor.agent.wrapper.sh  evennia-commands.md  (+6 more)
(+355 files in other folders)
