[project]
name = "beckoningmu"
version = "0.1.0"
description = "The Beckoning - A World of Darkness MUSH"
authors = [
    {name = "Devil", email = "dasblueeyeddevil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evennia>=5.0.1,<6.0.0",
    "gitpython>=3.1.45,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-django>=4.11.1,<5.0.0",
]
